# ccwmap

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  APP_STORE_DEPLOYMENT.md  BUILD_STATUS.md  CLAUDE.md  FUNCTIONAL_SPEC.md  IMPLEMENTATION_PLAN.md  IOS_BUILD_STATUS.md  PLAY_STORE_DEPLOYMENT.md  README.md  UPGRADE_NOTES.md  flutter_launcher_icons_debug.yaml  pubspec.yaml
docs/: DEPLOY.md  (+8 more)
importer/: .gitignore  README.md  config.yaml  pyproject.toml
importer/importer/: __init__.py  __main__.py  candidate.py  cli.py  pipeline.py  restriction_tag.py  state_laws.py  supabase_client.py
importer/importer/geo/: __init__.py  census_geocode.py  states.py
importer/importer/reports/: __init__.py  json_report.py  markdown.py
importer/importer/sources/: __init__.py  _archive.py  base.py  faa.py  gsa.py  hifld_courts.py  hifld_military.py  ipeds.py  nces.py  osm.py
importer/importer/stages/: __init__.py  _titlecase.py  apply.py  apply_state_law.py  dedup.py  diff.py  normalize.py  odbl_dump.py  refine_coords.py
importer/tests/: test_candidate.py  test_cli.py  test_geo_states.py  test_pipeline.py  test_smoke.py  test_state_laws.py  test_supabase_client.py
importer/tests/fixtures/: census_batch_response.txt  faa_commercial_service_sample.csv  faa_nasr_apt_sample.csv  gsa_frpp_sample.csv  gsa_frpp_sample.xlsx  hifld_courts_sample.geojson  hifld_military_sample.geojson  ipeds_hd_sample.csv  nces_ccd_directory_sample.csv  nces_edge_sample.csv  osm_tx_bars_sample.json  states_sample.geojson
importer/tests/geo/: test_census_geocode.py
(+287 files in other folders)
