[project]
name = "ccwmap-importer"
version = "0.1.0"
description = "Pre-populate pins importer for the CCW Map project."
requires-python = ">=3.12"
dependencies = [
    "httpx >= 0.27,< 0.28",
    "pydantic >= 2.7,< 3",
    "pyyaml >= 6.0,< 7",
    "shapely >= 2.0,< 3",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.2,< 9",
    "pytest-cov >= 5,< 6",
]

[build-system]
requires = ["setuptools >= 68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["importer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
