[project]
name = "ccwmap-importer"
version = "0.1.0"
description = "Pre-populate pins importer for the CCW Map project."
requires-python = ">=3.12"
dependencies = [
    # Pinned to 0.27.x for pytest-httpx 0.30.x compat — revisit when pytest-httpx supports httpx 0.28.
    "httpx >= 0.27,< 0.28",
    "pydantic >= 2.7,< 3",
    "pyyaml >= 6.0,< 7",
    "rapidfuzz >= 3.9,< 4",
    "shapely >= 2.0,< 3",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.2,< 9",
    "pytest-cov >= 5,< 6",
    "pytest-httpx >= 0.30,< 0.31",
]

[project.scripts]
ccwmap-importer = "importer.cli:main"

[build-system]
requires = ["setuptools >= 68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["importer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
